# Clibshot

./: .gitignore  AGENT_3_IMPLEMENTATION_SUMMARY.md  AGENT_4_SUMMARY.md  BACKEND_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT.md  FEATURES.md  IMPLEMENTATION_ROADMAP.md  PHASE2_PLAN.md  QUICK_REFERENCE.md  README.md  SUCCESS_SUMMARY.md  TESTING.md  TEST_REPORT.md  docker-compose.yml  start-backend.ps1  start-dev.ps1  start.ps1  start.sh  test-api.ps1
.ai/: AGENT_PROMPTS.md  CONTEXT_MANAGER.md  QUICK_START.md
.github/workflows/: ci.yml  docs.yml  release.yml
apps/backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/backend/src/: __init__.py  config.py  database.py  main.py  marketplace.py  models.py  plugin_manager.py  schemas.py
apps/backend/src/ai/: interface.py  onnx_runtime.py
apps/backend/src/api/: deps.py
apps/backend/src/api/v1/: router.py
apps/backend/src/api/v1/routes/: ai.py  plugins.py
apps/backend/src/core/: events.py  exceptions.py  logging.py
apps/backend/src/db/: session.py
apps/backend/src/monitoring/: metrics.py
apps/backend/src/plugins/: highlight_detector.py  manager.py
apps/backend/src/routes/: __init__.py  clips.py  marketplace.py  plugins.py
apps/backend/src/schemas/: plugin.py
apps/backend/src/security/: permissions.py  sandbox.py
apps/backend/tests/: test_api.py  test_clip_routes.py  test_clip_routes_simple.py  test_models.py  test_plugin_manager.py  test_plugin_routes.py  test_plugin_routes_simple.py
apps/desktop/: .env.example  README.md  index.html  launch.bat  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src-tauri/src/bridge/: mod.rs
apps/desktop/src-tauri/src/commands/: ai.rs  capture.rs  clips.rs  mod.rs  plugins.rs  system.rs
apps/desktop/src-tauri/src/plugins/: mod.rs
apps/desktop/src-tauri/src/state/: mod.rs
apps/desktop/src/app/: App.tsx  Router.tsx
apps/desktop/src/components/: ErrorBoundary.tsx
apps/desktop/src/components/layout/: MainLayout.tsx  Sidebar.tsx
apps/desktop/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/de/: common.json  ui.json
apps/desktop/src/i18n/locales/en/: common.json  ui.json
apps/desktop/src/i18n/locales/es/: common.json  ui.json
apps/desktop/src/i18n/locales/fr/: common.json  ui.json
apps/desktop/src/i18n/locales/tr/: common.json  ui.json
apps/desktop/src/pages/: AIModels.tsx  Capture.tsx  Dashboard.tsx  DevPanel.tsx  Plugins.tsx  Settings.tsx
apps/desktop/src/stores/: aiStore.ts  captureStore.ts  clipStore.ts  configStore.ts  index.ts  pluginStore.ts
apps/desktop/src/test/: App.test.tsx  logger.test.ts  setup.ts
apps/desktop/src/utils/: constants.ts  format.ts  logger.ts
docker/: README.md  backend.Dockerfile
docs/: 00_MASTER_AI_INSTRUCTION.md  01_PROJECT_STRUCTURE.md  02_PLUGIN_DEVELOPER_GUIDE.md  03_BACKEND_ARCHITECTURE.md  04_FRONTEND_ARCHITECTURE.md  05_AI_RUNTIME_ABSTRACTION.md  06_SECURITY_SANDBOX.md  07_MARKETPLACE_GITHUB.md  08_LOCALIZATION.md  09_PERFORMANCE_MCP.md  10_NATIVE_PLUGIN_GUIDE.md  11_RECOMMENDED_LIBRARIES.md
docs/api/: README.md
docs/archive/: INTEGRATION_STATUS.md  PLUGIN_SYSTEM_IMPLEMENTATION.md  QUICK_FIX.md  SETUP.md  SUCCESS_REPORT.md
docs/guides/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  PLUGIN_DEVELOPMENT.md  SETUP.md
plugins/: README.md
plugins/examples/cpp-demo/: CMakeLists.txt  README.md  manifest.json
plugins/examples/cpp-demo/locales/: en.json
plugins/examples/cpp-demo/src/: plugin.cpp
plugins/examples/hello-world-py/: README.md  config.schema.json  manifest.json
plugins/examples/hello-world-py/locales/: en.json  tr.json
plugins/examples/hello-world-py/src/: main.py
plugins/examples/rust-demo/: Cargo.toml  README.md  manifest.json  pyproject.toml
plugins/examples/rust-demo/locales/: en.json
plugins/examples/rust-demo/src/: lib.rs
plugins/templates/cpp-template/: README.md
plugins/templates/python-template/: README.md  config.schema.json  manifest.json
plugins/templates/python-template/locales/: en.json
plugins/templates/python-template/src/: main.py
plugins/templates/rust-template/: README.md
plugins/test-plugin/: manifest.json
plugins/test-plugin/locales/: en.json
plugins/test-plugin/src/: main.py
tools/clipshot-cli/: README.md  clipshot
tools/mcp-server/: README.md  requirements.txt  server.py
tools/scripts/: build.sh  deploy.sh  release.sh  test.sh
