[package]
name = "clipshot"
version = "0.1.0"
description = "Modular gaming clip platform with AI-powered highlights"
authors = ["ClipShot Contributors"]
license = "MIT"
repository = "https://github.com/ubeydtalha/Clibshot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"

# PyO3 for Python bridge
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Async runtime
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File system
walkdir = "2.4"

# System info
num_cpus = "1.16"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
