[package]
name = "clipshot"
version = "0.1.0"
description = "Modular Gaming Clip Platform"
authors = ["ClipShot Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
libloading = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
