[package]
name = "rust-demo-plugin"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "rust_demo_plugin"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.maturin]
python-source = "python"
